samples/_failures_safe/1761552885_82aaf7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_979ac253.c: In function ‘main’:
./samples/SAFE/__tmp_979ac253.c:159:37: error: expected ‘)’ at end of input
  159 |     if (start_node < 0 || start_node
      |        ~                            ^
      |                                     )
./samples/SAFE/__tmp_979ac253.c:159:5: error: expected declaration or statement at end of input
  159 |     if (start_node < 0 || start_node
      |     ^~
